--- a/flex-projeto/style.css
+++ b/flex-projeto/style.css
@@ -256,11 +256,37 @@ footer .footer{
     .flex-container{
         flex-direction: column;
     }
+    .apresentacao{
+        flex-direction: column-reverse;
+    }
     .apresentacao .texto{
-        min-height: 200px;
         width: 100%;
     }
-
+    #quem-somos{
+        flex-direction: column-reverse;
+    }
+    #quem-somos img{
+        min-width: 320px;
+        margin: auto;
+    }
+    .list-servicos{
+        flex-direction: column;
+    }
+    .item-servico img{
+        width: 50%;
+        margin: auto;
+    }
+    .list-planos{
+        flex-direction: column;
+        align-items: flex-start;
+        margin-bottom: 20px;
+    }
+    .list-planos .item-plano{
+        max-width: 90%;
+        margin: auto;
+        width: 100%;
+        margin-bottom: 20px;
+    }
 }
 
 
